--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <main id="container">
 
-    <img class="equlibrium_img" src="images\image-equilibrium.jpg" alt="equilibrium">
+    <img class="equlibrium_img" src="images/image-equilibrium.jpg" alt="equilibrium">
 
   <div id="text">
 
@@ -75,7 +75,7 @@
 
       <footer>
 
-        <img class="avatar" src="images\image-avatar.png" alt="avatar">
+        <img class="avatar" src="images/image-avatar.png" alt="avatar">
 
         <span>Creation of <span style="color: white">Jules Wyvern</span></span>
 
